# podreplay

./: .dockerignore  .eslintrc.cjs  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml  known-problematic-urls.md  litestream.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  podreplay.toml
.github/: dependabot.yml
.github/workflows/: build.yml  client.yml  deploy.yml  playwright.yml  pull_request.yml  server.yml
lib/: Cargo.toml
lib/src/: diff.rs  feed.rs  lib.rs  parser.rs  reader.rs  replay.rs  reschedule.rs  rewrite.rs  rule.rs  summarize.rs  test_helpers.rs
lib/tests/: diff.rs  helpers.rs  replay.rs
lib/tests/data/: megaphone.xml  sample_atom.xml  sample_rss_0.91.xml  sample_rss_0.92.xml  sample_rss_2.0.xml
lib_wasm/: Cargo.toml
lib_wasm/src/: lib.rs
migrations/: 20211026012652_init.sql
server/: Cargo.toml
server/src/: autodiscovery.rs  config.rs  db.rs  fetch.rs  helpers.rs  lib.rs  main.rs  proxy.rs  replay.rs  router.rs  serial.xml  summary.rs
server/tests/: helpers.rs  replay.rs  summary.rs
ui/: .eslintrc.cjs  .gitignore  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
ui/src/: app.html
ui/src/components/: ConfigureForm.svelte  FeedForm.svelte  Footer.svelte  Header.svelte  ItemPreview.svelte  SubscribeLinks.svelte  Timeline.svelte
ui/src/routes/: +page.svelte  __layout.svelte  global.css  index.svelte  preview.svelte
ui/src/routes/preview/: +page.svelte
ui/src/stores/: query.ts
ui/src/util/: dates.ts  fetchFeedSummary.ts  parseRule.ts  queryString.ts  reschedule.ts  shiftItems.ts  state.ts
ui/tests/: e2e.spec.ts
