[package]
name = "podreplay_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chronoutil = "0.2.3"
diligent-date-parser = "0.1.3"
itertools = "0.10.5"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
mime = "0.3.16"
nom = "7.1.1"
quick-xml = "0.23.1"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.37"
tracing = "0.1.37"
url = "2.3.1"
regex = "1.7.0"

[features]

[dev-dependencies]
pretty_assertions = "1.3.0"
