[package]
name = "podreplay_lib"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Erik Simmler <tgecho@gmail.com>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
chronoutil = "0.2.5"
diligent-date-parser = "0.1.4"
itertools = "0.11.0"
kuchiki = "0.8.1"
lazy_static = "1.4.0"
mime = "0.3.16"
nom = "7.1.3"
quick-xml = "0.30.0"
serde = { version = "1.0.183", features = ["derive"] }
thiserror = "1.0.44"
tracing = "0.1.37"
url = "2.4.0"
regex = "1.9.3"

[features]

[dev-dependencies]
pretty_assertions = "1.3.0"
