[package]
name = "podreplay_lib_wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Erik Simmler <tgecho@gmail.com>"]
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
podreplay_lib = { path = "../lib" }
wasm-bindgen = { version = "0.2.84", features = ["serde-serialize"] }
chrono = { version = "0.4.23", features = ["serde"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
