[package]
name = "podreplay"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Erik Simmler <tgecho@gmail.com>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
podreplay_lib = {path = "../lib"}
tokio = { version = "1.25.0", features = ["full"] }
hyper = { version = "0.14.24", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
serde = { version = "1.0.164", features = ["derive"] }
chrono = { version = "0.4.23", features = ["serde"] }
reqwest = { version = "0.11.14", default-features = false, features = ["rustls-tls"] }
axum = { version = "0.6.18", features = ["headers"] }
thiserror = "1.0.38"
chronoutil = "0.2.3"
sqlx = {git = "https://github.com/tgecho/sqlx", branch = "sqlite-datetime-utc", default-features = false, features=["sqlite", "chrono", "macros", "migrate", "runtime-tokio-rustls"]}
headers = "0.3.8"
regex = "1.8.4"
lazy_static = "1.4.0"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "cors", "fs"] }
color-eyre = "0.6.2"
reqwest-tracing = "0.4.0"
reqwest-middleware = "0.2.2"
figment = { version = "0.10.10", features = ["env", "toml"] }
hyper-tls = "0.5.0"
serde_json = "1.0.93"
kuchiki = "0.8.1"
url = "2.4.0"
base64 = "0.21.0"
percent-encoding = "2.3.0"
async-recursion = "1.0.2"
itertools = "0.10.5"

# workaround from https://github.com/launchbadge/sqlx/issues/473#issuecomment-655517309
[dependencies.openssl]
version = "0.10.55"
features = ["vendored"]

[dev-dependencies]
mockito = "1.0.2"
tracing-test = {git = "https://github.com/tgecho/tracing-test", branch = "trace-all"}
pretty_assertions = "1.3.0"
serde_json = "1.0.93"
assert-json-diff = "2.0.2"

[features]
