[package]
name = "podreplay"
version = "0.1.0"
edition = "2021"
rust-version = "1.65"
authors = ["Erik Simmler <tgecho@gmail.com>"]
license = "AGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
podreplay_lib = {path = "../lib"}
tokio = { version = "1.36.0", features = ["full"] }
hyper = { version = "1.2.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde = { version = "1.0.193", features = ["derive"] }
chrono = { version = "0.4.35", features = ["serde"] }
reqwest = { version = "0.12.1", default-features = false, features = ["rustls-tls"] }
axum = { version = "0.6.20", features = ["headers"] }
thiserror = "1.0.55"
chronoutil = "0.2.6"
sqlx = {git = "https://github.com/tgecho/sqlx", branch = "sqlite-datetime-utc", default-features = false, features=["sqlite", "chrono", "macros", "migrate", "runtime-tokio-rustls"]}
headers = "0.3.8"
regex = "1.9.4"
lazy_static = "1.4.0"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "cors", "fs"] }
color-eyre = "0.6.3"
reqwest-tracing = "0.4.8"
reqwest-middleware = "0.2.5"
figment = { version = "0.10.15", features = ["env", "toml"] }
hyper-tls = "0.6.0"
serde_json = "1.0.109"
kuchiki = "0.8.1"
url = "2.4.1"
base64 = "0.22.0"
percent-encoding = "2.3.1"
async-recursion = "1.1.0"
itertools = "0.12.1"

# workaround from https://github.com/launchbadge/sqlx/issues/473#issuecomment-655517309
[dependencies.openssl]
version = "0.10.64"
features = ["vendored"]

[dev-dependencies]
mockito = "1.4.0"
tracing-test = {git = "https://github.com/tgecho/tracing-test", branch = "trace-all"}
pretty_assertions = "1.3.0"
serde_json = "1.0.109"
assert-json-diff = "2.0.2"

[features]
